footer on mobile fixed

--- a/react-trip-map/src/App.css
+++ b/react-trip-map/src/App.css
@@ -70,6 +70,14 @@ nav {
   position: absolute;
 }
 
+footer {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem; 
+  margin-top: 70%;
+}
+
 @media screen and (max-width: 850px) {
   .title {
     font-size: 36px;
@@ -87,6 +95,7 @@ nav {
     font-size: 14px;
     margin-left: 15px;
   }
+
 }
 
 @media screen and (max-width: 450px) {
@@ -99,6 +108,14 @@ nav {
   .deleteContainer {
     font-size: 12px;
     margin-left: 35%;
+  }
+
+  footer {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 2.5rem; 
+    bottom: 0;
   }
   
 }
@@ -209,10 +226,4 @@ button {
   font-weight: normal;
 }
 
-footer {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  height: 2.5rem; 
-  margin-top: 60%;
-}
+
